crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@191.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1, 2]', '3 * $', silent => true);"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..57
    FuncCall@7..57
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..32
        Sconst@24..32 "'[1, 2]'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..41
        Sconst@34..41 "'3 * $'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      NamedArgExpr@43..57
        Ident@43..49 "silent"
        Whitespace@49..50 " "
        EqualsGreater@50..52 "=>"
        Whitespace@52..53 " "
        AConst@53..57
          TrueP@53..57 "true"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

