crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@192.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"a\"', '-$', silent => true);"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..51
    FuncCall@7..51
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..29
        Sconst@24..29 "'\"a\"'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..35
        Sconst@31..35 "'-$'"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      NamedArgExpr@37..51
        Ident@37..43 "silent"
        Whitespace@43..44 " "
        EqualsGreater@44..46 "=>"
        Whitespace@46..47 " "
        AConst@47..51
          TrueP@47..51 "true"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

