crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@196.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '[\"1\",2,0,3]' @? 'strict -$[*]';"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..44
      TypeCast@13..26
        AConst@13..26
          Sconst@13..26 "'[\"1\",2,0,3]'"
      Whitespace@26..27 " "
      Op@27..29 "@?"
      Whitespace@29..30 " "
      AConst@30..44
        Sconst@30..44 "'strict -$[*]'"
  Ascii59@44..45 ";"

