crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@199.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": [2]}', 'lax $.a + 3');"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..51
    FuncCall@7..51
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..36
        Sconst@24..36 "'{\"a\": [2]}'"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..51
        Sconst@38..51 "'lax $.a + 3'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

