crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@200.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": [2, 3, 4]}', 'lax -$.a');"
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..54
    FuncCall@7..54
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..42
        Sconst@24..42 "'{\"a\": [2, 3, 4]}'"
      Ascii44@42..43 ","
      Whitespace@43..44 " "
      AConst@44..54
        Sconst@44..54 "'lax -$.a'"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

