crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@202.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": [1, 2]}', 'lax $.a * 3', silent => true);"
---
SelectStmt@0..72
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..70
    FuncCall@7..70
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..39
        Sconst@24..39 "'{\"a\": [1, 2]}'"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..54
        Sconst@41..54 "'lax $.a * 3'"
      Ascii44@54..55 ","
      Whitespace@55..56 " "
      NamedArgExpr@56..70
        Ident@56..62 "silent"
        Whitespace@62..63 " "
        EqualsGreater@63..65 "=>"
        Whitespace@65..66 " "
        AConst@66..70
          TrueP@66..70 "true"
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

